--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,1 @@
-/* Add application styles & imports to this file! */
+@import url(https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css);
